--- a/templates/start.hbs
+++ b/templates/start.hbs
@@ -9,8 +9,8 @@
   <div id="docs">
     <div class='header'>
       <div class='left'>
-        <a href="https://www.ruuvi.io">
-          <img src="/assets/images/ruuvi-docs.png" id="logo">
+        <a href="http://ruuvi.com">
+          <img src="/assets/images/ruuvi_logo.png" id="logo">
         </a>
       </div>
     </div>
