--- a/templates/redirector.jade
+++ b/templates/redirector.jade
@@ -4,7 +4,7 @@ html
 		meta(http-equiv="X-UA-Compatible" content="IE=edge,chrome=1")
 		meta(name="viewport" content="width=device-width")
 		meta(content="Ruuvi" property="og:title")
-		meta(content="Documentation for Ruuvi, a platform for connected devices." name="description")
+		meta(content="Documentation for Ruuvi devices." name="description")
 
 		title Ruuvi Documentation | #{title}
 		script(src='/assets/js/jquery-1.11.1.min.js')
@@ -18,8 +18,8 @@ html
 		#docs
 			.header
 				.left
-					a(href="https://www.ruuvi.io")
-					img(src="/assets/images/ruuvi-docs.png" id="logo")
+					a(href="http://ruuvi.com")
+					img(src="/assets/images/ruuvi_logo.png" id="logo")
 			.getting-started
 				h1.choose-device-header Which device are you interested in?
 				ul.devices
@@ -27,4 +27,4 @@ html
 						a(href=path)
 							li.device(id=device)
 								h3 #{device}
-								img(src="/assets/images/#{device}.png")
+								img(src="/assets/images/#{device}.jpg")
