--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -5,12 +5,12 @@
         <i class="ion-navicon" title="show/hide the navigation"></i>
       </a>
     </div>
-    <a href="http://www.ruuvi.com">
+    <a href="http://ruuvi.com">
       <img src="/assets/images/ruuvi_logo.png" id="logo">
     </a>
     <div class="sections">
       <a class="nav {{#contains path.href 'guide'}}active{{/contains}}" href="/guide">Guide</a>
-      <a class="nav {{#contains path.href 'datasheets'}}active{{/contains}}" href="/datasheets">Datasheets</a>
+      <a class="nav {{#contains path.href 'specs'}}active{{/contains}}" href="/specs">Specs</a>
     </div>
     <div class="dropdown mobile-only">
       <a id="dLabel" data-target="#" class="nav" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
@@ -19,7 +19,7 @@
       </a>
       <ul class="dropdown-menu" aria-labelledby="dLabel">
         <li><a href="/guide">Guide</a></li>
-        <li><a href="/datasheets">Datasheets</a></li>
+        <li><a href="/specs">Specs</a></li>
       </ul>
     </div>
     <div class="search">
