--- a/templates/partials/head.hbs
+++ b/templates/partials/head.hbs
@@ -12,8 +12,8 @@
 <link rel="stylesheet" type="text/css" href="//cloud.typography.com/6107112/665726/css/fonts.css" />
 
 <!-- Meta -->
-<meta content="Ruuvi" property="og:title">
-<meta content="Documentation for Ruuvi, a platform for connected devices." name="description">
+<meta content="Ruuvi Documentation" property="og:title">
+<meta content="Documentation for Ruuvi devices." name="description">
 
 <!-- Favicon -->
 <link rel="shortcut icon" href="/assets/favicon2.ico" type="image/x-icon" />
