--- a/src/assets/less/search.less
+++ b/src/assets/less/search.less
@@ -100,7 +100,7 @@
         &.guide {
           border-left: 3px solid @carrot;
         }
-        &.datasheet {
+        &.spec {
           border-left: 3px solid @wisteria;
         }
         &.reference {
