--- a/templates/spec.hbs
+++ b/templates/spec.hbs
@@ -11,7 +11,7 @@
       <div class='menubar'>
 
       <ul class="nav reference">
-        {{#each datasheet}}
+        {{#each spec}}
             <ul>
               <li class="top-level {{#page-equal ../path.href ../path.name path.href path.name}}active{{/page-equal}}">
                 {{#page-equal ../path.href ../path.name path.href path.name}}
