--- a/src/assets/less/monospace-font.less
+++ b/src/assets/less/monospace-font.less
@@ -1,17 +1,17 @@
 @font-face {
   font-family: 'Fira Mono Medium';
-  src: url('https://s3.amazonaws.com/fonts.particle.io/FiraMono-Medium.woff2') format('woff2'),
-       url('https://s3.amazonaws.com/fonts.particle.io/FiraMono-Medium.woff') format('woff'),
-       url('https://s3.amazonaws.com/fonts.particle.io/FiraMono-Medium.ttf')  format('truetype');
+  src: url('https://github.com/ruuvi/ruuvi.github.io/raw/layout/src/assets/fonts/FiraMono-Medium.woff2') format('woff2'),
+       url('https://github.com/ruuvi/ruuvi.github.io/raw/layout/src/assets/fonts/FiraMono-Medium.woff') format('woff'),
+       url('https://github.com/ruuvi/ruuvi.github.io/raw/layout/src/assets/fonts/FiraMono-Medium.ttf')  format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Fira Mono Regular';
-  src: url('https://s3.amazonaws.com/fonts.particle.io/FiraMono-Regular.woff2') format('woff2'),
-       url('https://s3.amazonaws.com/fonts.particle.io/FiraMono-Regular.woff') format('woff'),
-       url('https://s3.amazonaws.com/fonts.particle.io/FiraMono-Regular.ttf')  format('truetype');
+  src: url('https://github.com/ruuvi/ruuvi.github.io/raw/layout/src/assets/fonts/FiraMono-Regular.woff2') format('woff2'),
+       url('https://github.com/ruuvi/ruuvi.github.io/raw/layout/src/assets/fonts/FiraMono-Regular.woff') format('woff'),
+       url('https://github.com/ruuvi/ruuvi.github.io/raw/layout/src/assets/fonts/FiraMono-Regular.ttf')  format('truetype');
   font-weight: normal;
   font-style: normal;
 }
